kubernetes/kube-prod-d1/cnpg-backups/prod-d1/ingress-seaweedfs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnpg-backups-ingress-seaweedfs-admin
  namespace: cnpg-backups
  labels:
    app.kubernetes.io/name: cnpg-backups
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: cnpg-backups-prod-d1
    app.kubernetes.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    description: "Ingress for Anisonarr application, routing traffic to the Anisonarr web service."
spec:
  rules:
    - host: cnpg-backups-admin.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-admin
                port:
                  name: swfs-master
  tls:
    - hosts:
        - cnpg-backups-admin.kube-prod-d1.mclacken.net
      secretName: cnpg-backups-admin-certificate-secrets
