kubernetes/kube-prod-d1/cnpg-backups/prod-d1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cnpg-backups-master
  namespace: cnpg-backups
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cnpg-backups-master.kube-prod-d1.mclacken.net`)
      kind: Rule
      services:
        - name: seaweedfs-filer-client
          port: 8888
          scheme: https
  tls:
    secretName: cnpg-backups-master-certificate-secrets
